--- a/config/codeql.yml
+++ b/config/codeql.yml
@@ -1,28 +1,6 @@
-name: "GitHub Field CodeQL Configuration"
+ed-security/codeql-queries/javascript/suites/codeql-javascript.qls@main
 
-disable-default-queries: true
-
-queries:
-  # C/CPP queries
-  - uses: advanced-security/codeql-queries/cpp/suites/codeql-cpp.qls@main
-
-  # CSharp queries
-  - uses: advanced-security/codeql-queries/csharp/suites/codeql-csharp.qls@main
-
-  # Go queries
-  - uses: advanced-security/codeql-queries/go/suites/codeql-go.qls@main
-
-  # Java queries
-  - uses: advanced-security/codeql-queries/java/suites/codeql-java.qls@main
-
-  # JavaScript/TypeScript queries
-  - uses: advanced-security/codeql-queries/javascript/suites/codeql-javascript.qls@main
-
-  # Python queries
-  - uses: advanced-security/codeql-queries/python/suites/codeql-python.qls@main
-
-  # Ruby queries
-  - uses: advanced-security/codeql-queries/ruby/suites/codeql-ruby.qls@main
+   uses: advanced-security/codeql-queries/ruby/suites/codeql-ruby.qls@main
 
 paths-ignore:
   # JavaScript
