--- a/config/codeql-external-api.yml
+++ b/config/codeql-external-api.yml
@@ -1,11 +1,4 @@
-name: "GitHub Field CodeQL External API Configuration"
-
-disable-default-queries: true
-
-queries:
-  # C/CPP
-  - uses: advanced-security/codeql-queries/cpp/suites/codeql-external-api.qls@main
-  # Java
+name: "GitHmmmJava
   - uses: advanced-security/codeql-queries/java/suites/codeql-external-api.qls@main
   # JavaScript/TypeScript
   - uses: advanced-security/codeql-queries/javascript/suites/codeql-external-api.qls@main
