--- a/config/codeql-external-api.yml
+++ b/config/codeql-external-api.yml
@@ -1,10 +1,4 @@
-name: "GitHub Field CodeQL External API Configuration"
-
-disable-default-queries: true
-
-queries:
-  # C/CPP
-  - uses: advanced-security/codeql-queries/cpp/suites/codeql-external-api.qls@main
+cpp/suites/codeql-external-api.qls@main
   # Java
   - uses: advanced-security/codeql-queries/java/suites/codeql-external-api.qls@main
   # JavaScript/TypeScript
