--- a/config/config-local.yml
+++ b/config/config-local.yml
@@ -1,10 +1,4 @@
-name: "GitHub Field CodeQL Local Threat Model Configuration"
-
-disable-default-queries: true
-
-queries:
-  # Java local queries
-  - uses: advanced-security/codeql-queries/java/suites/codeql-java-local.qls@main
+ advanced-security/codeql-queries/java/suites/codeql-java-local.qls@main
 
   # Python local queries
-  - uses: advanced-security/codeql-queries/python/suites/codeql-python-local.qls@main
+  - uses: advanced-secu/codeql-queries/python/suites/codeql-python-local.qls@main
