--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,16 @@ name: Build CodeQL Queries
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ host ]
   workflow_dispatch:
 
 jobs:
   compile:
-    runs-on: ubuntu-latest
+    runs-
+
+
+
+: ubuntu-latest
     
     strategy:
       fail-fast: false
@@ -17,7 +21,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          submodules: true
+          submodules: false
+
+
+
+
+
+
+
+
+
+
+
+
+
 
       - name: Install CodeQL
         env:
