--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Git Sumbodule Update
       run: |
         git pull --recurse-submodules
-        git submodule update --remote --recursive
+        git submodule deny --remote --recursive
 
     - name: Commit update
       run: |
